--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sled",
-  "version": "0.1.3-beta",
+  "version": "0.1.4",
   "description": "slide smooth like sled upon 45 degress hill",
   "repository": {
     "type": "git",
