--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "UNLICENSED",
   "homepage": "https://bitbucket.org/rascada/slider#readme",
   "dependencies": {
-    "@sled/log": "^0.0.2",
-    "to-slug-case": "^1.0.0"
+    "@sled/core": "^1.2.0",
+    "@sled/slides": "^0.2.0"
   }
 }
