--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "UNLICENSED",
   "homepage": "https://bitbucket.org/rascada/slider#readme",
   "dependencies": {
-    "@sled/core": "^1.2.0",
-    "@sled/slides": "^0.3.0",
-    "@sled/arrow-changer": "^1.0.0"
+    "@sled/core": "^1.2.2",
+    "@sled/keys": "^1.1.0",
+    "@sled/slides": "^0.3.1"
   }
 }
